--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,39 +3,52 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.iknow.android">
 
-  <uses-feature
-      android:name="android.hardware.camera"
-      android:required="false" />
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
 
-  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-      tools:ignore="ScopedStorage" />
-  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-  <uses-permission android:name="android.permission.CAMERA"/>
 
-  <application
-      android:name=".ZApplication"
-      android:allowBackup="false"
-      android:icon="@drawable/ic_launcher"
-      android:label="@string/app_name"
-      android:supportsRtl="true"
-      android:theme="@style/AppTheme"
-      tools:ignore="GoogleAppIndexingWarning, LockedOrientationActivity">
-    <activity
-        android:name=".features.select.VideoSelectActivity"
-        android:screenOrientation="portrait"
-        android:launchMode="singleTop"
-        android:exported="true">
-      <intent-filter>
-        <action android:name="android.intent.action.MAIN"/>
-        <category android:name="android.intent.category.LAUNCHER"/>
-      </intent-filter>
-    </activity>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="28" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="32" />
+    <uses-permission android:name="android.permission.READ_MEDIA_VIDEO"
+        android:minSdkVersion="33" />
 
-    <activity android:name=".features.trim.VideoTrimmerActivity"
-        android:screenOrientation="portrait"/>
+    <uses-permission android:name="android.permission.CAMERA" />
 
-    <activity android:name=".features.record.VideoRecordActivity"
-        android:screenOrientation="portrait"/>
-  </application>
+    <application
+        android:name=".ZApplication"
+        android:allowBackup="false"
+        android:icon="@drawable/ic_launcher"
+        android:label="@string/app_name"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning, LockedOrientationActivity">
+
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
+
+
+        <activity
+            android:name=".features.trim.VideoTrimmerActivity"
+            android:exported="true"
+            android:screenOrientation="portrait">
+
+
+        </activity>
+
+        <activity
+            android:name=".features.record.VideoRecordActivity"
+            android:screenOrientation="portrait" />
+    </application>
 
 </manifest>
