--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,20 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.6.10'
+    ext.kotlin_version = '1.9.0'
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.2'
-        classpath 'me.tatarka:gradle-retrolambda:3.3.1'
+        classpath 'com.android.tools.build:gradle:8.1.4' // Update to a compatible version
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
 allprojects {
     repositories {
+        maven {url "https://jitpack.io"}
         google()
         jcenter()
     }
